--- a/templates/broker/brokermaintenances.html
+++ b/templates/broker/brokermaintenances.html
@@ -22,20 +22,30 @@
 {% endblock %}
 
 {% block main_content %}
+    <form method="post" name="broker_list" action="{{ url_for('broker.show_comms') }}">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+        <input type="text" name="search">
+        <button class="btn btn-warning">搜尋</button>
+    </form>
     <form method="post" name="commission_list" action="{{ url_for('broker.check_payment') }}" role="form">
         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-        <div style="float: right">
-            <input list="broker_ids" name="broker_id" placeholder="{{ broker.broker_id }}"
-                   value="{{ broker.broker_id }}">
-            <datalist id="broker_ids">
-                <option value="員工1">員工1</option>
-                <option value="員工2">員工2</option>
-                <option value="員工3">員工3</option>
-                <option value="員工4">員工4</option>
-                <option value="員工5">員工5</option>
-                <option value="其他">其他</option>
+        <div>
+        {% if broker.broker_id %}
+            <input list="Brokerlists" name="brokerchose" value="{{broker.broker_id}}" placeholder="{{ broker.brober_name }}{{ broker.phone }}" autocomplete="off">
+        {% else %}
+            <input list="Brokerlists" name="brokerchose" placeholder="確認broker" autocomplete="off">
+        {% endif %}
+            <datalist id="Brokerlists">
+                {% for broker in brokers %}
+                    <option name="brokerchose" value="{{broker.broker_id}}">
+                        {{ broker.brober_name }}{{ broker.phone }}</option>
+                {% endfor %}
             </datalist>
-            <button type="button" class="btn btn-default btn-xs search-broker-btn">搜尋</button>
+            {#            <h2>{{ broker.broker_name }}#}
+            {#                <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#broker-dialog">#}
+            {#                    選擇Broker#}
+            {#                </button>#}
+            {#            </h2>#}
         </div>
         <div class="top-box">
 {#            <button class="btn btn-warning" data-toggle="modal" data-target="#userset-dialog">新增</button>#}
