--- a/templates/broker/brokers.html
+++ b/templates/broker/brokers.html
@@ -55,8 +55,8 @@
                 <tr>
                     <td>{{ commission.order_num }}</td>
                     <td>
-                        <input type="checkbox" name="order_num"
-                               value="{{ commission.order_num }},{{ commission.group_name }},{{ commission.car }},{{ commission.order_date }}"/>
+                        <input type="checkbox" name="comm_key"
+                               value="{{ commission.order_num }},{{ commission.car }}"/>
                     </td>
                     <td>{{ commission.group_name }}</td>
                     <td>{{ commission.car }}</td>
