--- a/templates/mc/base.html
+++ b/templates/mc/base.html
@@ -69,7 +69,7 @@
                         <li><a href="{{ url_for('broker.show_comms') }}">佣金計算</a></li>
                         <li><a href="{{ url_for('broker.show_count') }}">佣金維護</a></li>
                         <li><a href="{{ url_for('broker.payment') }}">付款清單</a></li>
-                        <li><a href="{{ url_for('broker.paycompletes') }}">付款清單</a></li>
+{#                        <li><a href="{{ url_for('broker.paycompletes') }}">付款清單</a></li>#}
                     </ul>
                 </li>
                 <li class="p4">
