--- a/templates/broker/brokers.html
+++ b/templates/broker/brokers.html
@@ -23,7 +23,7 @@
         <button class="btn btn-warning">搜尋</button>
     </form>
 
-    <form method="post" name="commission_list" action="{{ url_for('broker.distribute') }}" role="form">
+    <form method="post" name="commission_list" action="{{ url_for('broker.show_count') }}" role="form">
         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
         <div>
             <input list="Brokerlists" name="brokerchose" placeholder="確認Broker" autocomplete="off">
