--- a/templates/kanban/kanbancontrols.html
+++ b/templates/kanban/kanbancontrols.html
@@ -16,7 +16,7 @@
 
 {% block main_content %}
     <div class="top-box">
-        <button class="btn btn-warning btn-xs start-kanban-btn">開始</button>
+        <button class="btn btn-warning start-kanban-btn">開始</button>
     </div>
     <table class="table table-bordered">
         <thead>
