--- a/templates/broker/brokermaintenances.html
+++ b/templates/broker/brokermaintenances.html
@@ -80,10 +80,10 @@
                     <td>{{ comm.car }}</td>
                     <td>{{ comm.sale_amt }}</td>
                     <td>{{ comm.comm_amt }}
-                        <button class="btn btn-default btn-xs edit-broker-btn" type="button">明細</button>
+                        <button class="btn btn-default btn-xs edit-broker-btn" type="button" onclick="window.open('{{ url_for('broker.salesheet', order_num=comm.order_num) }}', '_blank')">明細</button>
                     </td>
                     <td>
-                        <button class="btn btn-default btn-xs edit-broker-btn " type="button">結算</button>
+                        <button class="btn btn-default btn-xs edit-broker-btn" type="button">結算</button>
                         <button class="btn btn-danger btn-xs delete-broker-btn" type="button">刪除</button>
                     </td>
                 </tr>
