--- a/templates/broker/brokers.html
+++ b/templates/broker/brokers.html
@@ -19,7 +19,7 @@
 {% block main_content %}
     <form method="post" name="broker_list" action="{{ url_for('broker.show_comms') }}">
         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-        <input type="text" name="search">
+        <input type="text" name="search" placeholder="輸入姓名或電話">
         <button class="btn btn-warning">搜尋</button>
     </form>
 
