--- a/templates/broker/payments.html
+++ b/templates/broker/payments.html
@@ -24,6 +24,7 @@
         <button class="btn btn-warning">搜尋</button>
     </form>
     <form method="post" name="commission_list" action="{{ url_for('broker.check_payment') }}" role="form">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
         <div>
             {% if broker.broker_id %}
                 <input list="Brokerlists" name="brokerchose" value="{{ broker.broker_id }}"
