--- a/templates/broker/brokers.html
+++ b/templates/broker/brokers.html
@@ -86,7 +86,7 @@
                         <div class="form-group">
                             <label class="col-sm-3 control-label">姓名或電話：</label>
                             <div class="col-sm-8">
-                                <input type="text" class="form-control" name="namecall" placeholder="姓名或電話">
+                                <input type="text" class="form-control" name="namecall" placeholder="輸入姓名或電話">
                             </div>
                         </div>
                     </form>
