--- a/templates/broker/payments.html
+++ b/templates/broker/payments.html
@@ -20,7 +20,7 @@
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
     <form method="post" name="broker_list" action="{{ url_for('broker.payment') }}">
         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-        <input type="text" name="search">
+        <input type="text" name="search" placeholder="輸入姓名或電話">
         <button class="btn btn-warning">搜尋</button>
     </form>
     <form method="post" name="commission_list" action="{{ url_for('broker.check_payment') }}" role="form">
@@ -83,13 +83,6 @@
             {% endfor %}
             </tbody>
         </table>
-    <div>
-        <select class="btn btn-success" name="declare">
-            <option value="個人申報">個人申報</option>
-            <option value="開立發票">開立發票</option>
-        </select>
-
-    </div>
  <button class="btn btn-warning" style="float: right">確認付款單</button>
     </form>
 
