--- a/templates/declare/incomes.html
+++ b/templates/declare/incomes.html
@@ -132,13 +132,13 @@
                         <div class="form-group">
                             <label class="col-sm-4 control-label">所得給付年度：</label>
                             <div class="col-sm-8">
-                                <input type="text" class="form-control" name="income_yyy" placeholder="所得給付年度">
+                                <input type="text" class="form-control" name="yyy" placeholder="所得給付年度">
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-sm-4 control-label">所得給付月份：</label>
                             <div class="col-sm-8">
-                                <input type="text" class="form-control" name="income_mm" placeholder="所得給付月份">
+                                <input type="text" class="form-control" name="mm" placeholder="所得給付月份">
                             </div>
                         </div>
                         <div class="form-group">
