--- a/templates/broker/brokermaintenances.html
+++ b/templates/broker/brokermaintenances.html
@@ -96,7 +96,7 @@
                         <td>已完成結算，不可更改</td>
                     {% else %}
                         <td>
-                            <button class="btn btn-default btn-xs edit-broker-btn" type="button">結算</button>
+{#                            <button class="btn btn-default btn-xs edit-broker-btn" type="button">結算</button>#}
                             <button class="btn btn-danger btn-xs delete-broker-btn" type="button">刪除</button>
                         </td>
                     {% endif %}
